--- a/btc-price-prediction/.gitignore
+++ b/btc-price-prediction/.gitignore
@@ -2,14 +2,14 @@
 # KEDRO PROJECT
 
 # ignore all local configuration
-conf/local/**
-!conf/local/.gitkeep
+#conf/local/**
+#!conf/local/.gitkeep
 
 # ignore potentially sensitive credentials files
-conf/**/*credentials*
+#conf/**/*credentials*
 
 # ignore everything in the following folders
-data/**
+#data/**
 
 # except their sub-folders
 !data/**/
@@ -18,7 +18,7 @@ data/**
 !.gitkeep
 
 # keep also the example dataset
-!data/01_raw/*
+#!data/01_raw/*
 
 
 ##########################
