--- a/btc-price-prediction/requirements.txt
+++ b/btc-price-prediction/requirements.txt
@@ -12,3 +12,9 @@ pytest-mock>=1.7.1, <2.0
 ruff~=0.1.8
 setuptools; python_version >= "3.12"
 pyspark
+numpy
+pandas
+matplotlib
+pandas-datareader
+tensorflow
+scikit-learn
